Add python3 support!

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-git+ssh://git@github.com/pebble/libpebble2.git@aa68460
-backports.ssl-match-hostname==3.4.0.2
+git+ssh://git@github.com/pebble/libpebble2.git@ee97bdf
 enum34==1.0.4
-six==1.9.0
-websocket-client==0.31.0
-wsgiref==0.1.2
-progressbar2==2.7.3
-pypng==0.0.17
+httplib2==0.9.1
 oauth2client==1.4.11
+progressbar2==2.7.3
+pyasn1==0.1.7
+pyasn1-modules==0.0.5
+pypng==0.0.17
 requests==2.7.0
+rsa==3.1.4
+six==1.9.0
+websocket-client==0.32.0
+wheel==0.24.0
