--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-libpebble2==0.0.1
+libpebble2==0.0.3
 enum34==1.0.4
 httplib2==0.9.1
 oauth2client==1.4.11
@@ -8,6 +8,7 @@ pyasn1-modules==0.0.5
 pypng==0.0.17
 requests==2.7.0
 rsa==3.1.4
+pyserial==2.7
 six==1.9.0
 websocket-client==0.32.0
 wheel==0.24.0
